# c_cmake_project_template

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
src/include/mtv/: all.h  despedida.h  saludo.h
src/lib/: despedida.c  saluda.c
src/tests/: test_despedida.c  test_saludo.c
